# euler

./: .gitignore  README.md  pyproject.toml
euler/: problemOne.py  problemTwo.py
tests/: test_euler.py  test_problemOne.py  test_problemTwo.py
