[tool.poetry]
name = "euler"
version = "0.1.0"
description = ""
authors = ["orlogan <orlogan7@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
scipy = "^1.9.1"
lineno = "^0.3.0"
pluggy = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = ""
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
